fix: No more double scrollbars on home screen
Refs: oph-717

--- a/app/styles/components/_c-home.scss
+++ b/app/styles/components/_c-home.scss
@@ -21,3 +21,13 @@
     border: 0;
   }
 }
+
+.override-home-page {
+  overflow-x: hidden !important;
+}
+
+@media ((width >= 63.9375em)) {
+  .au-c-app.override-home-page {
+    overflow-y: hidden !important;
+  }
+}
